--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -56,7 +56,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/tJXYF2C23S/Site-Reliability-Engineer'>Site Reliability Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/tJXYF2C23S/Site-Reliability-Engineer'>Site Reliability Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -122,7 +122,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/couchbase/1953249b-4880-4002-80da-598ef1efa6a1'>Couchbase - Lead Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/couchbase/1953249b-4880-4002-80da-598ef1efa6a1'>Couchbase - Lead Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -134,7 +134,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/amount/1fee3fff-f747-4ebe-a1d6-3a11ef581f06'>Amount - Site Reliability Engineering Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/amount/1fee3fff-f747-4ebe-a1d6-3a11ef581f06'>Amount - Site Reliability Engineering Manager</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -178,7 +178,7 @@
 <p><span class="badge badge-light">Pittsburgh</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/OteemoInc/743999697980374-sr-site-reliability-engineer-devsecops'>Oteemo, Inc Sr. Site Reliability Engineer, DevSecOps | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/OteemoInc/743999697980374-sr-site-reliability-engineer-devsecops'>Oteemo, Inc Sr. Site Reliability Engineer, DevSecOps | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -188,7 +188,7 @@
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/oB5lbfwW'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/splunk/job/oB5lbfwW'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -273,7 +273,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4490481002'>Job Application for Site Reliability Engineer at Digital On Us</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4490481002'>Job Application for Site Reliability Engineer at Digital On Us</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -376,7 +376,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on:: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://golang.cafe/job/senior-software-engineer-or-site-reliability-engineer-micro-1571243556'>Senior Software Engineer or Site Reliability Engineer at Micro</a></h5> 
+<h5><a href='https://golang.cafe/job/senior-software-engineer-or-site-reliability-engineer-micro-1571243556'>Senior Software Engineer or Site Reliability Engineer at Micro</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on:: 2019-10-17</p>
 <hr/>
@@ -384,7 +384,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://finanzchef24.join.com/jobs/435885-site-reliability-engineer-devops-expert-m-w-d'>Job @ Finanzchef24 (Munich): Site Reliability Engi... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://finanzchef24.join.com/jobs/435885-site-reliability-engineer-devops-expert-m-w-d'>Job @ Finanzchef24 (Munich): Site Reliability Engi... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -404,7 +404,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/smarsh/job/o377afwb'>Smarsh Careers - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/smarsh/job/o377afwb'>Smarsh Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon  Atlanta, Georgia</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -448,7 +448,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/talend/c254d935-57ef-4ef1-b475-1b12a11369fe'>Talend - Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/talend/c254d935-57ef-4ef1-b475-1b12a11369fe'>Talend - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA  Redwood City Paris London Beijing Tokyo Singapore Sydney Bangalore</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
